Make sure edit link can wrap

--- a/imports/ui/styling/stylesheets/objects/_content.scss
+++ b/imports/ui/styling/stylesheets/objects/_content.scss
@@ -43,3 +43,12 @@
     }
   }
 }
+
+.Content__title {
+  margin-right: grid(2);
+}
+
+.Content__edit {
+  display: inline-block;
+  @include title--xxs;
+}
